[gd_scene load_steps=3 format=3 uid="uid://bh3nykch4838a"]

[ext_resource type="Script" uid="uid://bwm303w4eq15w" path="res://gear/_ui/general/item_info.gd" id="1_gscmn"]

[sub_resource type="Theme" id="Theme_c7bw8"]

[node name="ItemInfoPanel" type="VBoxContainer"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 128.0
offset_top = -128.0
offset_right = 448.0
offset_bottom = 128.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_c7bw8")
script = ExtResource("1_gscmn")

[node name="ItemName" type="Label" parent="."]
layout_mode = 2

[node name="ItemType" type="Label" parent="."]
layout_mode = 2

[node name="StatsLabel" type="Label" parent="."]
layout_mode = 2

[node name="EffectsLabel" type="Label" parent="."]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
autowrap_mode = 2

[node name="ModifiersLabel" type="Label" parent="."]
layout_mode = 2
